--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -4,4 +4,4 @@ help: |
 language: Пожалуйста, выберите язык.
 language_selected: <b>Бот</b> теперь говорит по-русски.
 group_only: Это действие можно выполнить только в группе
-not_enough_users: Надо чтобы написало не менее трёх юзеров
+not_enough_users: Надо чтобы написало не менее двух юзеров
